--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
     <body>
         <s_t3>
             <div class="ct">
+                <div class="search">
+                    <h4 class="side_title">Search for</h4>
+					<s_search>
+						<input type="text"
+						 placeholder="Press your keyword"/>
+					</s_search>
+				</div>
                 <div>
                     <h4 class="side_title">Menu</h4>
                     <ul>
@@ -36,7 +43,7 @@
                         </li>
                     </ul>
                 </div>
-                <div>
+                <div class="menu">
                     <h4 class="side_title">Category</h4>
                     <ul class="tt_category">
                         <li class="">
