--- a/index.html
+++ b/index.html
@@ -18,19 +18,22 @@
             as="style"
             crossorigin="crossorigin"
             href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard-dynamic-subset.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+        <link rel="stylesheet" href="https://use.typekit.net/czf4boo.css">
     </head>
     <body>
         <s_t3>
+            <div class="wrap">
             <div class="ct">
                 <div class="search">
-                    <h4 class="side_title">Search for</h4>
+                    <h4 class="side_title"><i class="fa-solid fa-magnifying-glass"></i>Find</h4>
 					<s_search>
 						<input type="text"
 						 placeholder="Press your keyword"/>
 					</s_search>
 				</div>
                 <div>
-                    <h4 class="side_title">Menu</h4>
+                    <h4 class="side_title"><i class="fa-solid fa-bars-staggered"></i>Menu</h4>
                     <ul>
                         <li class="t_menu_home first">
                             <a href="/" target="">home</a>
@@ -44,7 +47,7 @@
                     </ul>
                 </div>
                 <div class="menu">
-                    <h4 class="side_title">Category</h4>
+                    <h4 class="side_title"><i class="fa-solid fa-cat"></i>Category</h4>
                     <ul class="tt_category">
                         <li class="">
                             <a href="/category" class="link_tit">
@@ -70,7 +73,43 @@
                                                 <span class="c_cnt">(0)</span>
                                             </a>
                                         </li>
+                                        <li class="">
+                                            <a href="/category/category2/subcategory" class="link_sub_item">
+                                                subcategory
+                                                <span class="c_cnt">(0)</span>
+                                            </a>
+                                        </li>
                                     </ul>
+                                </li>
+                                <li class="">
+                                    <a href="/category/category3" class="link_item">
+                                        category3
+                                        <span class="c_cnt">(0)</span>
+                                    </a>
+                                </li>
+                                <li class="">
+                                    <a href="/category/category3" class="link_item">
+                                        category3
+                                        <span class="c_cnt">(0)</span>
+                                    </a>
+                                </li>
+                                <li class="">
+                                    <a href="/category/category3" class="link_item">
+                                        category3
+                                        <span class="c_cnt">(0)</span>
+                                    </a>
+                                </li>
+                                <li class="">
+                                    <a href="/category/category3" class="link_item">
+                                        category3
+                                        <span class="c_cnt">(0)</span>
+                                    </a>
+                                </li>
+                                <li class="">
+                                    <a href="/category/category3" class="link_item">
+                                        category3
+                                        <span class="c_cnt">(0)</span>
+                                    </a>
                                 </li>
                                 <li class="">
                                     <a href="/category/category3" class="link_item">
@@ -85,6 +124,14 @@
                 
 
             </div>
+            <div class="content">
+                <div class="main">
+                    <img src="./images/headphone.png">
+                    <h1 class="title">Kissin' On My<br>Tattoos</h1>
+                </div>
+                
+            </div>
+        </div>
         </s_t3>
         <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     </body>
