--- a/index.html
+++ b/index.html
@@ -125,11 +125,14 @@
 
             </div>
             <div class="content">
-                <div class="main">
-                    <img src="./images/headphone.png">
-                    <h1 class="title">Kissin' On My<br>Tattoos</h1>
-                </div>
                 
+                <div class="a a1">
+                    <!--<img src="./images/headphone.png">
+                    <h1 class="title">Kissin' On My<br>Tattoos</h1>-->
+                </div>
+                <div class="a a2">
+                    
+                </div>
             </div>
         </div>
         </s_t3>
