--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
         <link rel="stylesheet" href="https://use.typekit.net/czf4boo.css">
+        <link href="https://fonts.cdnfonts.com/css/pp-neue-montreal" rel="stylesheet">  
     </head>
     <body>
         <s_t3>
@@ -150,7 +151,12 @@
                             <!--<img src="./images/headphone.png"> <h1 class="title">Kissin' On
                             My<br>Tattoos</h1>-->
                         </div>
-                        <div class="a a2"></div>
+                        <div class="a a2">
+                           
+                        </div>
+                        <div>
+                            <div class="category_wrapper"><div class="category_element"><h3 style="color: var(--base-white); --baseHeight: 1;" class=""><!--[-->Dentaire<!--]--></h3><!----><!----><div class="category_background" style="background:rgb(54, 106, 230);"><div class="backdrop"></div><div style="transform: translate(-6.42112%, 24.7897%); background: rgb(110, 192, 233);" class="elemColor"></div></div></div></div>
+                        </div>
                     </div>
                 </div>
             </div>
