--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             </li>
                         </ul>
                     </div>
-
+                    <div class="category_background"><div class="backdrop"></div><div style="transform: translate(-6.42112%, 24.7897%); background: rgb(255 255 255);" class="elemColor"></div></div>
                 </div>
                 <div class="content">
                     <header>
@@ -155,9 +155,16 @@
                            
                         </div>
                         <div>
-                            <div class="category_wrapper"><div class="category_element"><h3 style="color: var(--base-white); --baseHeight: 1;" class=""><!--[-->Dentaire<!--]--></h3><!----><!----><div class="category_background" style="background:rgb(54, 106, 230);"><div class="backdrop"></div><div style="transform: translate(-6.42112%, 24.7897%); background: rgb(110, 192, 233);" class="elemColor"></div></div></div></div>
+                            
                         </div>
                     </div>
+                    <footer>
+                        <div>
+                            <div>{oves}</div>
+                            <a href="#">Site by nana®</a>
+                            <div>©2023</div>
+                        </div>
+                    </footer>
                 </div>
             </div>
         </s_t3>
